# network-infrastructure-schema

./: .mise.toml  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  PROJECT-STATUS-AND-ROADMAP.md  README.md  pyproject.toml
_build/: build_schema.py  check_drift.py  validate_examples.py
ci/: pipeline.md
docs/: PROJECT-STATUS-AND-ROADMAP.md  SESSION-NOTES.md  original-prompt.md
docs/conventions/: README.md
docs/research/: 2026-06-02-json-schema-pydantic-drift-gate.md
docs/superpowers/plans/: 2026-06-03-schema-pydantic-drift-gate.md
docs/superpowers/specs/: 2026-06-03-schema-pydantic-drift-gate-design.md
examples/containerlab/: generated-topology.clab.yaml
examples/invalid/graph/: dangling-ref.yaml  ip-not-in-prefix.yaml
examples/invalid/structural/: bad-apiversion.yaml  bad-mac.yaml  (+11 more)
examples/kinds/: allowed-flow.yaml  backup-class.yaml  device.yaml  failure-scenario.yaml  firewall-policy.yaml  gateway.yaml  host.yaml  interface.yaml  lxc-container.yaml  monitoring-check.yaml  network-zone.yaml  prefix.yaml  proxmox-cluster.yaml  secret-ref.yaml  service-dependency.yaml  service.yaml  site.yaml  virtual-machine.yaml  vlan.yaml
examples/manifests/: multi-site-failover.yaml  site-home.yaml
examples/opentofu/: proxmox-example.tf
generators/: containerlab-rules.md  proxmox-opentofu-mapping-guide.md
mappings/: netbox-mapping-guide.md
policies/conftest/: README.md  conftest.toml
policies/opa/: backup.rego  exposure.rego  ip_prefix.rego  policy_test.rego  privileged.rego  zone_isolation.rego
python/: infra_models.py
schemas/: infra.schema.json
