# Python side of the validation toolchain (global conventions §2: uv-managed).
#
# This repo is NOT an installable Python package: it ships a JSON Schema plus a
# hand-authored Pydantic module (python/infra_models.py) and build helpers
# (_build/*.py) that are run as scripts, and downstream repos consume *generated
# artifacts*, not a pip import. Hence no [build-system] and package = false —
# uv manages a reproducible .venv for the validators only.
#
# Non-Python tools (conftest, opentofu) are pinned in .mise.toml, not here.

[project]
name = "network-infrastructure-schema"
version = "0.1.0"
description = "Validation toolchain for the Luminous3D desired-state infrastructure schema pack."
requires-python = ">=3.12"

[dependency-groups]
# Exact-pinned to the known-green baseline (PROJECT-STATUS-AND-ROADMAP.md §7),
# deliberately NOT track-latest: these are the versions the schema pack was
# validated against. Bump intentionally, then re-run validation stages 1-4.
# PEP 735 group (not a [project.optional-dependencies] extra) because the repo
# is package = false — extras require an installable package; dev groups do not.
# uv installs the `dev` group by default on `uv sync` / `uv run`.
dev = [
    "pydantic==2.13.4",
    "jsonschema==4.26.0",
    "PyYAML==6.0.3",
    "yamllint==1.38.0",
]

[tool.uv]
package = false
